--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Blog Posts</h1>
-<h3>Sample Post One</h3>
-<p><%= @content_first %></p>
-<hr>
-<h3>Sample Post two</h3>
-<p><%= @content_second %></p>
+<% @post.each do |post| %>
+	<h3><%= link_to post.title,post %></h3>
+	<p><%= post.body %></p>
+	<hr>			
+<% end %>
