Modified the way controller view works, added the list of posts associated with each controller in its view

--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -4,6 +4,12 @@
   <strong>Name:</strong>
   <%= @category.name %>
 </p>
-
+<p>
+	<strong>Posts:</strong>
+	<% @posts.each do |post| %>
+		<h3><%= link_to post.title, post %></h3>
+		<p><%= post.body %></p>
+	<% end %>
+</p>
 <%= link_to 'Edit', edit_category_path(@category) %> |
 <%= link_to 'Back', categories_path %>
