--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -1,5 +1,12 @@
-<h1>New Category</h1>
-
-<%= render 'form' %>
+<h1>Add New Category</h1>
+<%= form_for @category do |f| %>
+	<p>
+		<%= f.label :name %><br/>
+		<%= f.text_field :name %><br/>
+	</p>
+	<p>
+		<%= f.submit "Add Category" %>
+	</p>
+<% end %>
 
 <%= link_to 'Back', categories_path %>
